client get chatrooms API
