# pkg/handlers/handlers.go
@@ -279,6 +279,15 @@ func (s *Handlers) ClientMessageEvent(ctx context.Context, req *pb.ClientMessage
 	return resp, nil
 }
 
+func (s *Handlers) ClientGetChatRooms(ctx context.Context, req *pb.ClientGetChatRoomsRequest) (*pb.CommonChatRoomsResponse, error) {
+	handler := &chatRoom.ClientGetChatRoomsHandler{Model: s.Model}
+	resp, err := handler.ClientGetChatRooms(ctx, req)
+	if err != nil {
+		return nil, err
+	}
+	return resp, nil
+}
+
 func (s *Handlers) ClientBlock(ctx context.Context, req *pb.ClientBlockRequest) (*pb.ClientBlockResponse, error) {
 	handler := &user.ClientBlockHandler{Model: s.Model}
 	resp, err := handler.ClientBlock(ctx, req)
